--- a/public/css/estilos-index.css
+++ b/public/css/estilos-index.css
@@ -1,10 +1,14 @@
 .fondofirtssection {
   height: 100vh;
+  width: 100%;
   background: url("https://images4.alphacoders.com/457/4574.jpg") no-repeat center center;
   background-size: cover;
 }
 
-.gris-transparent {
-  background: rgba(0, 0, 0, 0.466);
+.carousel-item img {
+  height: 100vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  background-size: cover;
 }
 /*# sourceMappingURL=estilos-index.css.map */
