--- a/public/sass/estilos-index.scss
+++ b/public/sass/estilos-index.scss
@@ -1,5 +1,15 @@
 .fondofirtssection{
     height: 100vh;
+    width: 100%;
     background: url("https://images4.alphacoders.com/457/4574.jpg")no-repeat center center;
     background-size: cover;
+}
+
+.carousel-item{
+    img{
+        height: 100vh;
+        min-height: 300px;
+        background: no-repeat center center scroll;
+        background-size: cover;
+    }  
 }
